--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,7 @@ repositories {
 
 dependencies {
     implementation 'com.auth0:java-jwt:4.4.0'
+    implementation 'org.json:json:20210307'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 }
 
